tests/fixtures/fail/returned_borrow_shared_as_mut.sali
let bad('a: region)(borrow('a) value: i32): borrow(mut, 'a) i32 = borrow value
let main(): i32 = 42
